# biorepo

./: .gitignore  pyproject.toml
src/biorepo/: biorepo.py  config.py  env.py  exception.py  install.py  repo.py  shell.py  source.py  ui.py
src/biorepo/cli/: __main__.py  base.py  test.py
src/biorepo/model/: model.py
