[project]
name = "biorepo"
version = "0.1.0"
description = ""
authors = [
    {name = "dwpeng",email = "dwpeng1122@foxmail.com"},
]
dependencies = [
    "httpx>=0.25.0",
    "rich>=13.6.0",
    "gitpython>=3.1.40",
    "pydantic>=2.4.2",
    "PyYaml>=6.0.1",
    "isort>=5.12.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
biorepo = "biorepo.cli.__main__:main"

[tool.pdm]


[tool.ruff]
line-length = 80
