[project]
name = "biorepo"
version = "0.1.0"
description = ""
authors = [
    {name = "dwpeng", email = "dwpeng1122@foxmail.com"},
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.4.2",
    "rich>=13.6.0",
    "pyyaml>=6.0.1",
    "gitpython>=3.1.40",
    "pydantic-yaml>=1.2.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[project.scripts]
biorepo = "biorepo.cli.__main__:main"

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
]
